默认提示页修改。

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "pages":[
-    "pages/shopcommentlist/shopcommentlist"
+    "pages/me/me"
   ],
   "window":{
     "backgroundTextStyle":"light",
