1.小程序完整版本(确实我的页面，尚未设计).

--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "pages":[
-    "pages/me/me"
+    "pages/shoplist/shoplist",
+    "pages/shopdetail/shopdetail",
+    "pages/shopcomment/shopcomment",
+    "pages/shopcommentlist/shopcommentlist",
+    "pages/shopcommentdetail/shopcommentdetail"
   ],
   "window":{
     "backgroundTextStyle":"light",
