--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages":[
+    "pages/me/me",
     "pages/shoplist/shoplist",
     "pages/shopdetail/shopdetail",
     "pages/shopcomment/shopcomment",
